# rules_debian_packages

./: MODULE.bazel
debian_packages/private/lockfile_generator/: BUILD.bazel
